# Grasp_Pose_Generation

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
Evaluations/: evaluation_1.py  evaluation_2.py  evaluation_3.py  evaluation_4.py
Losses_Errors/: losses_errors_1.py  losses_errors_2.py  losses_errors_3.py  losses_errors_4.py
Models_Trains/: all_models.py  cvae_01_losses_errors.pkl  cvae_01_weights.pth  cvae_02_1_losses_errors.pkl  cvae_02_2_losses_errors.pkl  cvae_02_losses_errors.pkl  cvae_02_losses_errors_1.pkl  cvae_02_weights.pth  cvae_02_weights_1.pth  cvae_03Noise_weights.pth  cvae_03_losses_errors.pkl  loading_data.py  train01_Model01.py  train02_Model02.py  train03_Model03.py  train04_Model03_Noise.py  train05_Model02_1.py  train06_Model02_2.py  train07_Model04.py  train08_Model05.py  train09_Model06.py
New Progress/: cvae_02_4_3_pca_t_sne_umap.py  model_CVAE_02_4.py  newPCA.py  scalers.pkl  training_CVAE_02_4.py
Plots/: vis_reconstructed_errors_4_pose.py  vis_reconstructed_hand_object_errors_all_frames.py
PreprocessData/: a_Extract_Data.py  b_Load_ExtractedData.py  c_Preproccesing.py  d_Load_PreprocessedData.py
Visualization/: vis_hand_3D.py  vis_object_3D.py  vis_reconstruct_hand_object_2D_1.py  vis_reconstruct_hand_object_2D_2.py
models/checkpoints/: cvae_02_weights_2.pth  cvae_03_weights.pth
outputs/logs/: cvae_02_3_losses_errors.pkl  cvae_02_losses_errors_2.pkl  cvae_03Noise_losses_errors.pkl
scripts/: evaluate.py  train.py
tests/: README.md  __init__.py  conftest.py  test_data.py  test_evaluation.py  test_models.py
(+18 files in other folders)
